# pure_follower

./: CMakeLists.txt  package.xml  pure_follower.kdev4  readMe.txt
.kdev4/: pure_follower.kdev4
include/waypoint_follower/: libwaypoint_follower.h
lib/: libwaypoint_follower.cpp
src/: BSping.cpp  BSping.h  pure_pursuit.cpp  pure_pursuit.h  pure_pursuit_core.cpp  pure_pursuit_core.h  pure_pursuit_viz.cpp  pure_pursuit_viz.h
