<?xml version="1.0"?>
<package format="2">
  <name>pure_follower</name>
  <version>0.0.0</version>
  <description>The pure_follower package</description>
  <maintainer email="louis@todo.todo">louis</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <!--build_depend>gnss</build_depend>
    <build_depend>autoware_msgs</build_depend-->

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>message_generation</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>tf</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>visualization_msgs</build_export_depend>
    <!--build_export_depend>gnss</build_export_depend-->
    <!--build_export_depend>autoware_msgs</build_export_depend-->


    <exec_depend>roscpp</exec_depend> 
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <!--exec_depend>gnss</exec_depend>
    <exec_depend>autoware_msgs</exec_depend-->



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
